--- a/src/app/tasks-list/new-task/new-task.component.html
+++ b/src/app/tasks-list/new-task/new-task.component.html
@@ -22,17 +22,17 @@
             <label for="inputNewPriority" class="form-label mt-2">Priority</label>
             <div>
               <select class="form-select" aria-label="Priority" id="inputNewPriority">
-                <option selected value="Low">Low</option>
-                <option value="Medium">Medium</option>
-                <option value="High">High</option>
+                <option selected value="Low-1">Low</option>
+                <option value="Medium-2">Medium</option>
+                <option value="High-3">High</option>
               </select>
             </div>
             <label for="inputNewStatus" class="form-label mt-2">Status</label>
             <div>
               <select class="form-select" aria-label="Status" id="inputNewStatus">
-                <option selected value="To Do">To Do</option>
-                <option value="In Progress">In Progress</option>
-                <option value="Done">Done</option>
+                <option selected value="To Do-1">To Do</option>
+                <option value="In Progress-2">In Progress</option>
+                <option value="Done-3">Done</option>
               </select>
             </div>
             <div class="d-flex justify-content-between mt-3 pb-4">
