--- a/src/app/kanban/kanban.component.css
+++ b/src/app/kanban/kanban.component.css
@@ -1,3 +1,12 @@
+@-moz-document url-prefix() {
+  select {
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    background-color: white;
+    padding-left: 5px;
+  }
+}
+
 h6 {
   color: darkgrey;
 }
