--- a/src/app/tasks-list/tasks-list.component.css
+++ b/src/app/tasks-list/tasks-list.component.css
@@ -1,3 +1,12 @@
+@-moz-document url-prefix() {
+  select {
+    border: 1px solid darkgrey;
+    border-radius: 3px;
+    background-color: white;
+    padding-left: 5px;
+  }
+}
+
 .table {
   border: 1px solid darkgrey;
   border-collapse: separate;
