--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,10 @@
     <app-sidebar (pageToEmit)="changePage($event)"></app-sidebar>
   </div>
   <div class="col-sm-9 col-xl-10">
-    <app-tasks-list *ngIf="pageShow === 'task-list'"></app-tasks-list>
-    <app-kanban *ngIf="pageShow === 'kanban'"></app-kanban>
+    <!-- change to routing /task-list and /kanban -->
+    <!-- router-outlet -->
+    <router-outlet></router-outlet>
+    <!-- <app-tasks-list *ngIf="pageShow === 'task-list'"></app-tasks-list>
+    <app-kanban *ngIf="pageShow === 'kanban'"></app-kanban> -->
   </div>
 </div>
