--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -3,13 +3,7 @@
   border-right: 1px solid lightgrey;
 }
 
-.logo-text-one {
-  font-size: 30px;
-  font-weight: bolder;
-  color: limegreen;
-}
-
-.logo-text-two {
+.logo-text {
   font-size: 30px;
   font-weight: bolder;
 }
@@ -26,4 +20,10 @@
   box-shadow: inset 0 0 0 1px limegreen;
   color: limegreen;
   transition: background-color .3s, box-shadow .3s, color .3s;
+}
+
+.active {
+  background-color: transparent;
+  box-shadow: inset 0 0 0 1px limegreen;
+  color: limegreen;
 }
