--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,18 +1,10 @@
 <nav class="nav flex-column sidebar-div">
-  <div class="logo-text ms-sm-3 ms-xl-4 mt-5 mb-5"><span class="logo-text-one">TASK</span><span class="logo-text-two">IT</span></div>
+  <div class="logo-text ms-sm-3 ms-xl-4 mt-5 mb-5"><span style="color: limegreen">TASK</span><span>IT</span></div>
   <button class="btn btn-success ms-sm-3 ms-xl-4 me-sm-3 me-xl-4"
-  [ngStyle]="pageToShow === 'task-list' ? {
-    backgroundColor: 'transparent',
-    boxShadow: 'inset 0 0 0 1px limegreen',
-    color: 'limegreen'
-  } : {}"
-  (click)="onChangePage('task-list')">Task List</button>
+  routerLinkActive="active"
+  routerLink="/tasks-list">Task List</button>
   <button class="btn btn-success ms-sm-3 ms-xl-4 me-sm-3 me-xl-4 mt-3 mb-auto"
-  [ngStyle]="pageToShow === 'kanban' ? {
-    backgroundColor: 'transparent',
-    boxShadow: 'inset 0 0 0 1px limegreen',
-    color: 'limegreen'
-  } : {}"
-  (click)="onChangePage('kanban')">KanBan</button>
+  routerLinkActive="active"
+  routerLink="/kanban">KanBan</button>
   <app-user-info-box></app-user-info-box>
 </nav>
