--- a/src/app/tasks-list/tasks-list.component.html
+++ b/src/app/tasks-list/tasks-list.component.html
@@ -29,26 +29,26 @@
     <div class="dropdown me-2">
       <button class="btn btn-default btn-sm dropdown-toggle mt-1 unformattedDate select-box" type="button" data-bs-toggle="dropdown">Due Date</button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" (click)="showFilter('.unformattedDate', 'Due Date')">Show All</a></li>
-        <li><a class="dropdown-item" (click)="showFilter('.unformattedDate', 'Oct. 31st, 2023', '2023-10-31')">Oct. 31st, 2023</a></li>
+        <li><a class="dropdown-item">Show All</a></li>
+        <li><a class="dropdown-item">Oct. 31st, 2023</a></li>
       </ul>
     </div>
     <div class="dropdown me-2">
       <button class="btn btn-default btn-sm dropdown-toggle mt-1 priority select-box" type="button" data-bs-toggle="dropdown">Priority</button>
       <ul class="dropdown-menu priority">
-        <li><a class="dropdown-item" (click)="showFilter('.priority', 'Priority')">Show All</a></li>
-        <li><a class="dropdown-item" (click)="showFilter('.priority', 'Low')"><span class="bi bi-circle-fill low">&nbsp;</span>Low</a></li>
-        <li><a class="dropdown-item" (click)="showFilter('.priority', 'Medium')"><span class="bi bi-circle-fill medium">&nbsp;</span>Medium</a></li>
-        <li><a class="dropdown-item" (click)="showFilter('.priority', 'High')"><span class="bi bi-circle-fill high">&nbsp;</span>High</a></li>
+        <li><a class="dropdown-item">Show All</a></li>
+        <li><a class="dropdown-item"><span class="bi bi-circle-fill low">&nbsp;</span>Low</a></li>
+        <li><a class="dropdown-item"><span class="bi bi-circle-fill medium">&nbsp;</span>Medium</a></li>
+        <li><a class="dropdown-item"><span class="bi bi-circle-fill high">&nbsp;</span>High</a></li>
       </ul>
     </div>
     <div class="dropdown">
       <button class="btn btn-default btn-sm dropdown-toggle mt-1 status select-box" type="button" data-bs-toggle="dropdown">Status</button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" (click)="showFilter('.status', 'Status')">Show All</a></li>
-        <li><a class="dropdown-item" (click)="showFilter('.status', 'To Do')">To Do</a></li>
-        <li><a class="dropdown-item" (click)="showFilter('.status', 'In Progress')">In Progress</a></li>
-        <li><a class="dropdown-item" (click)="showFilter('.status', 'Done')">Done</a></li>
+        <li><a class="dropdown-item">Show All</a></li>
+        <li><a class="dropdown-item">To Do</a></li>
+        <li><a class="dropdown-item">In Progress</a></li>
+        <li><a class="dropdown-item">Done</a></li>
       </ul>
     </div>
     <span class="flex-grow-1"></span>
@@ -62,10 +62,10 @@
     <table class="table table-bordered table-hover rounded-3">
       <thead>
         <tr>
-          <th class="header can-sort" scope="col" (click)="sortTable('title')">Task&nbsp;<span class="bi bi-caret-down"></span></th>
-          <th class="header can-sort" scope="col" (click)="sortTable('unformattedDate')">Due Date&nbsp;<span class="bi bi-caret-down"></span></th>
-          <th class="header can-sort" scope="col" (click)="sortTable('priorityNumber')">Priority&nbsp;<span class="bi bi-caret-down"></span></th>
-          <th class="header can-sort" scope="col" (click)="sortTable('statusNumber')">Status&nbsp;<span class="bi bi-caret-down"></span></th>
+          <th class="header can-sort" scope="col">Task&nbsp;<span class="bi bi-caret-down"></span></th>
+          <th class="header can-sort" scope="col">Due Date&nbsp;<span class="bi bi-caret-down"></span></th>
+          <th class="header can-sort" scope="col">Priority&nbsp;<span class="bi bi-caret-down"></span></th>
+          <th class="header can-sort" scope="col">Status&nbsp;<span class="bi bi-caret-down"></span></th>
           <th class="header" scope="col">Actions</th>
         </tr>
       </thead>
@@ -111,9 +111,9 @@
       </tbody>
     </table>
     <div class="pages text-center">
-      <button class="btn btn-sm btn-arrow me-1" [disabled]="pageNum === 1" (click)="switchPageNum('back')">&laquo;</button>
+      <button class="btn btn-sm btn-arrow me-1" [disabled]="pageNum === 1" (click)="prevPage()">&laquo;</button>
       <button class="btn btn-sm btn-num me-1">{{ pageNum }}</button>
-      <button class="btn btn-sm btn-arrow" [disabled]="pageNum === totalPages" (click)="switchPageNum('forward')">&raquo;</button>
+      <button class="btn btn-sm btn-arrow" [disabled]="pageNum === totalPages" (click)="nextPage()">&raquo;</button>
     </div>
   </div>
 </div>
