--- a/src/app/tasks-list/tasks-list.component.html
+++ b/src/app/tasks-list/tasks-list.component.html
@@ -11,7 +11,7 @@
       <div class="modal-body text-center mt-3">
         <p *ngIf="deleteIndex !== undefined"
         class="mb-4"
-        style="font-weight: bold; font-size: 28px;">Are you sure you want to delete task '{{ page[pageIndex].title }}'?</p>
+        style="font-weight: bold; font-size: 28px;">Are you sure you want to delete task '{{ tasks[deleteIndex].title }}'?</p>
         <div class="mb-5">
           <button type="button" class="btn btn-secondary dlt-btn me-4" data-bs-dismiss="modal">Cancel</button>
           <button type="button" class="btn btn-danger dlt-btn" data-bs-dismiss="modal" (click)="deleteTask(deleteIndex)">Delete</button>
@@ -20,7 +20,7 @@
     </div>
   </div>
 </div>
-<!-- End Delete Confirmation -->
+<!-- End Delete Confirmation Modal -->
 <!-- Task List Bar -->
 <div class="container mt-5">
   <h1 class="mb-4" >Task List</h1>
@@ -71,42 +71,33 @@
       </thead>
       <tbody>
         <tr class="border-bottom"
-        *ngFor="let task of page; let i = index;">
-          <th class="title" scope="row">{{ task.title }}</th>
-          <td>{{ task.dueDate }}</td>
-          <td><span
-            *ngIf="task.priority !== ''"
-            class="bi bi-circle-fill {{ task.priority.toLowerCase() }}">&nbsp;</span>{{ task.priority }}</td>
-          <td>
-            <!-- Change to dropdown -->
-            <!-- <div class="dropdown">
-              <button class="btn btn-default btn-sm dropdown-toggle mt-1 status" type="button" data-bs-toggle="dropdown">{{ task.status }}</button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" (click)="showFilter('.status', 'To Do')">To Do</a></li>
-                <li><a class="dropdown-item" (click)="showFilter('.status', 'In Progress')">In Progress</a></li>
-                <li><a class="dropdown-item" (click)="showFilter('.status', 'Done')">Done</a></li>
-              </ul>
-            </div> -->
-            <select class="status-dropdown" id="status-change"
-            (change)="changeStatus($event.target.value, i)"
-            *ngIf="task.priority !== ''">
-              <option selected hidden>{{ task.status }}</option>
-              <option value="To Do-1">To Do</option>
-              <option value="In Progress-2">In Progress</option>
-              <option value="Done-3">Done</option>
-            </select>
-            <!-- Change to dropdown -->
-            <!-- {{ task.status }} -->
-          </td>
-          <td>
-            <!-- <div class="d-flex justify-content-evenly" -->
-            <div
-            *ngIf="task.priority !== ''">
-              <i class="bi bi-eye action me-3" title="View" (click)="showViewModal(i)"></i>
-              <i class="bi bi-pencil-square action me-3" title="Edit" (click)="showEditModal(i)"></i>
-              <i class="bi bi-trash action" title="Delete" (click)="showDeleteModal(i)"></i>
-            </div>
-          </td>
+        *ngFor="let task of tasks; let i = index;">
+          <ng-container *ngIf="i >= ((pageNum - 1) * 15) && i < ((pageNum - 1) * 15 + 15)">
+            <th class="title" scope="row">{{ task.title }}</th>
+            <td>{{ task.dueDate }}</td>
+            <td><span
+              *ngIf="task.priority !== ''"
+              class="bi bi-circle-fill {{ task.priority.toLowerCase() }}">&nbsp;</span>{{ task.priority }}</td>
+            <td>
+              <select class="status-dropdown" id="status-change"
+              (change)="changeStatus($event.target.value, i)"
+              *ngIf="task.priority !== ''">
+                <option selected hidden>{{ task.status }}</option>
+                <option value="To Do-1">To Do</option>
+                <option value="In Progress-2">In Progress</option>
+                <option value="Done-3">Done</option>
+              </select>
+            </td>
+            <td>
+              <!-- <div class="d-flex justify-content-evenly" -->
+              <div
+              *ngIf="task.priority !== ''">
+                <i class="bi bi-eye action me-3" title="View" (click)="showViewModal(i)"></i>
+                <i class="bi bi-pencil-square action me-3" title="Edit" (click)="showEditModal(i)"></i>
+                <i class="bi bi-trash action" title="Delete" (click)="showDeleteModal(i)"></i>
+              </div>
+            </td>
+          </ng-container>
         </tr>
       </tbody>
     </table>
