Working on Landing Page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="row" style="height: 100vh; width: 100vw;">
-  <div class="col-sm-3 col-xl-2">
-    <app-sidebar (pageToEmit)="changePage($event)"></app-sidebar>
+  <div class="col-sm-3 col-xl-2" id="sidebar">
+    <app-sidebar></app-sidebar>
   </div>
   <div class="col-sm-9 col-xl-10">
     <!-- change to routing /task-list and /kanban -->
