--- a/src/app/kanban/kanban.component.html
+++ b/src/app/kanban/kanban.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <h1>KanBan</h1>
   <div class="row d-flex justify-content-evenly mt-3 ms-2 me-5">
-    <div class="col-4">
+    <div class="col-xl-4 col-lg-6 col-md-12">
       <h6>To Do</h6>
       <div class="container task-container">
         <!-- Task Card -->
@@ -27,7 +27,7 @@
         <!-- End Task Card -->
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-xl-4 col-lg-6 col-md-12">
       <h6>In Progress</h6>
       <div class="container task-container">
         <!-- Task Card -->
@@ -53,7 +53,7 @@
         <!-- End Task Card -->
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-xl-4 col-lg-6 col-md-12">
       <h6>Done</h6>
       <div class="container task-container">
         <!-- Task Card -->
