--- a/src/app/tasks-list/tasks-list.component.html
+++ b/src/app/tasks-list/tasks-list.component.html
@@ -59,7 +59,7 @@
 <!-- End Task List Bar -->
 <div class="container">
   <div class="table-responsive">
-    <table class="table table-bordered table-hover rounded-3">
+    <table class="table table-bordered table-hover rounded-3" id="taskTable">
       <thead>
         <tr>
           <th class="header can-sort" scope="col">Task&nbsp;<span class="bi bi-caret-down"></span></th>
@@ -73,7 +73,7 @@
         <tr class="border-bottom"
         *ngFor="let task of tasks; let i = index;">
           <ng-container *ngIf="i >= ((pageNum - 1) * 15) && i < ((pageNum - 1) * 15 + 15)">
-            <th class="title" scope="row">{{ task.title }}</th>
+            <td class="title" scope="row">{{ task.title }}</td>
             <td>{{ task.dueDate }}</td>
             <td><span
               *ngIf="task.priority !== ''"
