Finished Landing Page for now

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,9 +2,9 @@
   <div class="logo-text ms-sm-3 ms-xl-4 mt-5 mb-5"><span style="color: limegreen">TASK</span><span>IT</span></div>
   <button class="btn btn-success ms-sm-3 ms-xl-4 me-sm-3 me-xl-4"
   routerLinkActive="active"
-  routerLink="/tasks-list">Task List</button>
+  routerLink="./tasks-list">Task List</button>
   <button class="btn btn-success ms-sm-3 ms-xl-4 me-sm-3 me-xl-4 mt-3 mb-auto"
   routerLinkActive="active"
-  routerLink="/kanban">KanBan</button>
+  routerLink="./kanban">KanBan</button>
   <app-user-info-box></app-user-info-box>
 </nav>
