--- a/src/app/tasks-list/tasks-list.component.css
+++ b/src/app/tasks-list/tasks-list.component.css
@@ -17,7 +17,7 @@
 }
 
 td.title {
-  font-weight: bolder;
+  font-weight: bold;
 }
 
 .top-bar {
@@ -92,6 +92,7 @@ td:empty::after {
   /* background-color: lightgrey; */
   border-bottom: 1px solid grey;
   color: darkgrey;
+  font-weight: 500;
 }
 
 .can-sort {
