--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,61 @@
-<div class="container text-center mt-2">
-  <button class="btn btn-success me-2">LogIn</button>
-  <button class="btn btn-success">LogOut</button>
+<div class="vertical-center" [ngSwitch]="true">
+  <div class="container info-box">
+    <!-- Sign Up -->
+    <div *ngSwitchCase="doesUserHaveAccount === false">
+      <div class="ms-sm-3 ms-xl-4 mt-5 mb-5">
+        <span class="logo-text">Welcome to </span>
+        <span class="logo-text green">TASK</span><span class="logo-text">IT!</span>
+        <div class="label"><span>Sign up to get things done.</span></div>
+      </div>
+      <form>
+        <div class="mb-3 ms-4 me-4">
+          <label for="firstName" class="form-label label">First Name</label>
+          <input type="text" class="form-control" id="firstName">
+        </div>
+        <div class="mb-3 ms-4 me-4">
+          <label for="lastName" class="form-label label">Last Name</label>
+          <input type="text" class="form-control" id="lastName">
+        </div>
+        <div class="mb-3 ms-4 me-4">
+          <label for="email" class="form-label label">Email</label>
+          <input type="text" class="form-control" id="email">
+        </div>
+        <div class="mb-3 ms-4 me-4">
+          <label for="password" class="form-label label">Password</label>
+          <input type="text" class="form-control" id="password">
+        </div>
+      </form>
+      <div class="d-flex justify-content-end me-3 sign-up-bottom">
+        <div class="mt-2 me-4 account">
+          <span class="me-2">Have an account?</span><a class="green login" (click)="hasAccount(true); containerHeight()">Login</a>
+        </div>
+        <button class="btn btn-success me-2 submit" (click)="onLogin()">Submit</button>
+      </div>
+    </div>
+    <!-- End Sign Up -->
+    <!-- Login -->
+    <div *ngSwitchCase="doesUserHaveAccount === true">
+      <div class="ms-sm-3 ms-xl-4 mt-5 mb-5">
+        <span class="logo-text">Welcome Back!</span>
+        <div class="label"><span>Let's get to work.</span></div>
+      </div>
+      <form>
+        <div class="mb-3 ms-4 me-4">
+          <label for="email" class="form-label label">Email</label>
+          <input type="text" class="form-control" id="email">
+        </div>
+        <div class="mb-3 ms-4 me-4">
+          <label for="password" class="form-label label">Password</label>
+          <input type="text" class="form-control" id="password">
+        </div>
+      </form>
+      <div class="d-flex justify-content-end me-3 login-bottom">
+        <div class="mt-2 me-4 account">
+          <span class="me-2">Don't have an account?</span><a class="green login" (click)="hasAccount(false); containerHeight()">Sign Up</a>
+        </div>
+        <button class="btn btn-success me-2 submit" (click)="onLogin()">Submit</button>
+      </div>
+    </div>
+    <!-- End Login -->
+  </div>
 </div>
