Refactored new task and edit task to use same modal

--- a/src/app/tasks-list/task-modal/task-modal.component.css
+++ b/src/app/tasks-list/task-modal/task-modal.component.css
@@ -1,3 +1,4 @@
+/* New Task */
 .dropdown {
   color: lightgrey;;
 }
@@ -66,3 +67,4 @@
   color: limegreen;
   transition: background-color .3s, box-shadow .3s, color .3s;
 }
+/* End New Task */
