--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -6,11 +6,28 @@
   align-items: center;
 }
 
-.container {
+.welcome-box {
+  background-color: rgb(248, 249, 250);
+  border: 1px solid #e5e5e5;
+  border-radius: 10px;
+}
+
+.welcome-text {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.screenshot {
+  display: block;
+  margin: auto;
+  width: 850px;
+}
+
+.auth-container {
   width: 550px;
 }
 
-.container.switch {
+.auth-container.switch {
   position: relative;
   animation: move .3s ease-in-out;
   margin-left: 50vw;
