Fixed centering some text on landing page

--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -31,13 +31,13 @@
 
 .img-container {
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .overlay {
   position: absolute;
   top: 94%;
-  left: 28%;
-
 }
 
 .screenshot {
