--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="text-center img-container">
       <img class="screenshot" src="./assets/images/landing_screen.png">
-      <span class="welcome-paragraph overlay">Create an account to get started today.</span>
+      <p class="welcome-paragraph overlay">Create an account to get started today.</p>
     </div>
     <div class="text-center buttons mt-4 mb-5">
       <button class="btn btn-success me-3 signup-btn" (click)="hasAccount(false)">Sign Up</button>
