--- a/src/app/toast/toast.component.html
+++ b/src/app/toast/toast.component.html
@@ -1,10 +1,10 @@
 <div class="toast-container position-absolute top-0 start-50 translate-middle-x p-3">
   <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="d-flex">
-      <div class="toast-body">
+      <div class="toast-body ms-2">
         <span>Task '{{ taskTitle }}' was {{ actionTaken }}.</span>
       </div>
-      <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+      <button type="button" class="btn-close me-3 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
     </div>
 </div>
