--- a/src/app/toast/toast.component.html
+++ b/src/app/toast/toast.component.html
@@ -4,7 +4,7 @@
       <div class="toast-body ms-2">
         <span>Task '{{ taskTitle }}' was {{ actionTaken }}.</span>
       </div>
-      <button type="button" class="btn-close me-3 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>
+      <button type="button" class="btn-close btn-close-white me-3 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
+  </div>
 </div>
